support linenumber for code

--- a/src/posts/2024/0115.md
+++ b/src/posts/2024/0115.md
@@ -11,7 +11,7 @@ tags: ['Microservices', 'Cloud Native', 'Architecture']
 
 随着云原生技术的不断发展，微服务架构也在持续演进，从最初的单体应用拆分，到如今的服务网格、Kubernetes原生部署，微服务架构正在走向更加成熟和完善的阶段。
 
-```typescript
+```typescript showLineNumbers
 // 现代微服务架构示例
 interface MicroService {
   name: string;
@@ -41,7 +41,7 @@ interface MicroService {
 
 从单体应用迁移到微服务架构是一个渐进的过程。我们可以采用"绞杀者模式"（Strangler Pattern），逐步将单体应用中的功能迁移到新的微服务中。这种方式可以降低迁移风险，同时保证系统的稳定性。
 
-```java
+```java showLineNumbers
 // 绞杀者模式示例
 public class StranglerFacade {
     private LegacySystem legacySystem;
@@ -79,7 +79,7 @@ public class StranglerFacade {
 
 在分布式系统中，保证数据一致性是一个挑战。我们可以采用最终一致性的方案，通过事件驱动的方式来处理跨服务的数据更新。
 
-```typescript
+```typescript showLineNumbers
 // 事件驱动示例
 interface Event {
   type: string;
