--- a/src/posts/2024/0125.md
+++ b/src/posts/2024/0125.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Memory Safety', 'Ownership']
 
 ## 所有权的基本规则
 
-```rust
+```rust showLineNumbers
 fn main() {
     // 基本的所有权规则示例
     let s1 = String::from("hello");    // s1获得所有权
@@ -31,7 +31,7 @@ Rust的所有权系统基于以下三个核心规则：
 
 ## 借用机制
 
-```rust
+```rust showLineNumbers
 fn calculate_length(s: &String) -> usize {
     s.len()
 }
@@ -56,7 +56,7 @@ fn main() {
 1. 在任意给定时间，要么只能有一个可变引用，要么只能有多个不可变引用
 2. 引用必须总是有效的
 
-```rust
+```rust showLineNumbers
 fn main() {
     let mut s = String::from("hello");
     
@@ -72,7 +72,7 @@ fn main() {
 
 生命周期是Rust另一个重要概念，它确保引用保持有效：
 
-```rust
+```rust showLineNumbers
 fn longest<'a>(x: &'a str, y: &'a str) -> &'a str {
     if x.len() > y.len() {
         x
@@ -98,7 +98,7 @@ fn main() {
 
 Rust提供了多种智能指针类型：
 
-```rust
+```rust showLineNumbers
 use std::rc::Rc;
 
 fn main() {
