--- a/src/posts/2024/0215.md
+++ b/src/posts/2024/0215.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Smart Pointers', 'Memory Management']
 
 ## Box<T>：堆分配的值
 
-```rust
+```rust showLineNumbers
 fn main() {
     // 在堆上分配一个整数
     let b = Box::new(5);
@@ -43,7 +43,7 @@ fn main() {
 
 ## Rc<T>：引用计数智能指针
 
-```rust
+```rust showLineNumbers
 use std::rc::Rc;
 
 fn main() {
@@ -67,7 +67,7 @@ fn main() {
 
 ## RefCell<T>：内部可变性模式
 
-```rust
+```rust showLineNumbers
 use std::cell::RefCell;
 
 fn main() {
@@ -93,7 +93,7 @@ fn main() {
 
 ## 组合智能指针
 
-```rust
+```rust showLineNumbers
 use std::rc::Rc;
 use std::cell::RefCell;
 
@@ -130,7 +130,7 @@ fn main() {
 
 ## 内存泄漏和循环引用
 
-```rust
+```rust showLineNumbers
 use std::rc::Rc;
 use std::cell::RefCell;
 
