--- a/src/posts/2024/0225.md
+++ b/src/posts/2024/0225.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Concurrency', 'Threading']
 
 ## 使用线程
 
-```rust
+```rust showLineNumbers
 use std::thread;
 use std::time::Duration;
 
@@ -39,7 +39,7 @@ fn main() {
 
 ## 使用move闭包
 
-```rust
+```rust showLineNumbers
 use std::thread;
 
 fn main() {
@@ -55,7 +55,7 @@ fn main() {
 
 ## 消息传递
 
-```rust
+```rust showLineNumbers
 use std::sync::mpsc;
 use std::thread;
 
@@ -104,7 +104,7 @@ fn main() {
 
 ## 共享状态并发
 
-```rust
+```rust showLineNumbers
 use std::sync::{Arc, Mutex};
 use std::thread;
 
@@ -133,7 +133,7 @@ fn main() {
 
 ## 使用通道进行复杂通信
 
-```rust
+```rust showLineNumbers
 use std::sync::mpsc;
 use std::thread;
 use std::time::Duration;
