--- a/src/posts/2024/0315.md
+++ b/src/posts/2024/0315.md
@@ -11,7 +11,7 @@ tags: ['AI', 'LLM', 'Software Development']
 
 从代码补全到自动化测试，从需求分析到文档生成，AI正在成为开发者的得力助手。这种变革不仅提高了开发效率，也正在重塑整个软件开发生命周期。
 
-```python
+```python showLineNumbers
 # AI辅助代码生成示例
 from openai import OpenAI
 
@@ -50,7 +50,7 @@ class AICodeAssistant:
 
 现代IDE集成了强大的AI代码补全功能，不仅能够预测下一行代码，还能根据注释生成完整的函数实现。这大大提高了开发效率，减少了重复性工作。
 
-```typescript
+```typescript showLineNumbers
 // AI代码补全示例
 interface CodeCompletionService {
   // 根据上下文提供代码建议
@@ -91,7 +91,7 @@ class AICodeCompletion implements CodeCompletionService {
 
 AI可以根据代码自动生成单元测试和集成测试，提高测试覆盖率，同时减少测试编写的工作量。
 
-```typescript
+```typescript showLineNumbers
 // AI测试生成示例
 class AITestGenerator {
   async generateUnitTests(sourceCode: string): Promise<string> {
@@ -122,7 +122,7 @@ class AITestGenerator {
 
 AI代码审查工具可以自动检测代码中的潜在问题，包括性能瓶颈、安全漏洞和最佳实践违规。
 
-```typescript
+```typescript showLineNumbers
 // AI代码审查示例
 interface CodeReviewResult {
   issues: Array<{
@@ -163,7 +163,7 @@ class AICodeReviewer {
 
 编写高质量的提示（Prompt）是有效使用AI工具的关键。好的提示应该清晰、具体，并包含足够的上下文信息。
 
-```typescript
+```typescript showLineNumbers
 // 提示工程示例
 class PromptBuilder {
   private context: string = '';
@@ -199,7 +199,7 @@ class PromptBuilder {
 
 将AI工具无缝集成到现有的开发流程中是提高效率的关键。这包括IDE插件、CI/CD流程集成等。
 
-```typescript
+```typescript showLineNumbers
 // AI工具集成示例
 class AIDevTools {
   private codeCompletion: AICodeCompletion;
@@ -233,7 +233,7 @@ class AIDevTools {
 
 AI生成的代码需要经过严格的质量控制，包括代码审查、测试覆盖率检查等。
 
-```typescript
+```typescript showLineNumbers
 // 质量控制示例
 class AICodeQualityControl {
   async validateGeneratedCode(code: string): Promise<boolean> {
