--- a/src/posts/2024/0325.md
+++ b/src/posts/2024/0325.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Macros', 'Metaprogramming']
 
 ## 声明宏
 
-```rust
+```rust showLineNumbers
 // 创建一个简单的声明宏
 macro_rules! say_hello {
     () => {
@@ -32,7 +32,7 @@ fn main() {
 
 ### 复杂的模式匹配
 
-```rust
+```rust showLineNumbers
 macro_rules! vec_of_squares {
     ($($x:expr),*) => {
         {
@@ -53,7 +53,7 @@ fn main() {
 
 过程宏需要在单独的crate中定义。这里我们展示一个简化的示例：
 
-```rust
+```rust showLineNumbers
 use proc_macro::TokenStream;
 
 #[proc_macro_derive(HelloWorld)]
@@ -77,7 +77,7 @@ fn impl_hello_world(ast: &syn::DeriveInput) -> TokenStream {
 
 ### 属性宏
 
-```rust
+```rust showLineNumbers
 #[proc_macro_attribute]
 pub fn route(attr: TokenStream, item: TokenStream) -> TokenStream {
     let path = syn::parse_macro_input!(attr as syn::LitStr);
@@ -101,7 +101,7 @@ pub fn route(attr: TokenStream, item: TokenStream) -> TokenStream {
 
 ### 递归宏
 
-```rust
+```rust showLineNumbers
 macro_rules! recursive_sum {
     ($x:expr) => { $x };
     ($x:expr, $($rest:expr),+) => {
@@ -117,7 +117,7 @@ fn main() {
 
 ### 条件编译
 
-```rust
+```rust showLineNumbers
 #[cfg(feature = "logging")]
 macro_rules! log {
     ($($arg:tt)*) => {
@@ -137,7 +137,7 @@ fn main() {
 
 ## 构建DSL
 
-```rust
+```rust showLineNumbers
 macro_rules! html {
     ($($content:tt)*) => {
         HtmlBuilder::new().build(|| {
@@ -181,7 +181,7 @@ fn main() {
    - 过程宏使用驼峰命名法（CamelCase）
 
 2. 文档和注释
-   ```rust
+   ```rust showLineNumbers
    /// 计算一系列数字的平方和
    ///
    /// # 示例
@@ -201,7 +201,7 @@ fn main() {
    ```
 
 3. 错误处理
-   ```rust
+   ```rust showLineNumbers
    macro_rules! safe_divide {
        ($a:expr, $b:expr) => {
            {
@@ -216,7 +216,7 @@ fn main() {
    ```
 
 4. 卫生性（Hygiene）
-   ```rust
+   ```rust showLineNumbers
    macro_rules! create_function {
        ($func_name:ident) => {
            fn $func_name() {
