--- a/src/posts/2024/0405.md
+++ b/src/posts/2024/0405.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'WebAssembly', 'Web Development']
 
 ## 环境配置
 
-```bash
+```bash showLineNumbers
 # 安装wasm-pack
 cargo install wasm-pack
 
@@ -24,7 +24,7 @@ cd wasm-demo
 
 修改Cargo.toml：
 
-```toml
+```toml showLineNumbers
 [package]
 name = "wasm-demo"
 version = "0.1.0"
@@ -39,7 +39,7 @@ wasm-bindgen = "0.2"
 
 ## 基本示例
 
-```rust
+```rust showLineNumbers
 use wasm_bindgen::prelude::*;
 
 #[wasm_bindgen]
@@ -65,7 +65,7 @@ pub fn fibonacci(n: u32) -> u32 {
 
 ## 复杂数据类型
 
-```rust
+```rust showLineNumbers
 use wasm_bindgen::prelude::*;
 
 #[wasm_bindgen]
@@ -96,7 +96,7 @@ impl Point {
 
 ## 与JavaScript交互
 
-```rust
+```rust showLineNumbers
 use wasm_bindgen::prelude::*;
 
 #[wasm_bindgen]
@@ -129,7 +129,7 @@ pub fn create_typed_array() -> js_sys::Float64Array {
 
 ## 异步操作
 
-```rust
+```rust showLineNumbers
 use wasm_bindgen::prelude::*;
 use wasm_bindgen_futures::JsFuture;
 use web_sys::{Request, RequestInit, RequestMode, Response};
@@ -152,7 +152,7 @@ pub async fn fetch_data(url: String) -> Result<JsValue, JsValue> {
 
 ## DOM操作
 
-```rust
+```rust showLineNumbers
 use wasm_bindgen::prelude::*;
 use web_sys::{Document, Element, HtmlElement, Window};
 
@@ -173,7 +173,7 @@ pub fn create_element() -> Result<(), JsValue> {
 
 ## 性能优化
 
-```rust
+```rust showLineNumbers
 use wasm_bindgen::prelude::*;
 
 #[wasm_bindgen]
@@ -218,7 +218,7 @@ impl ImageProcessor {
 
 ## 构建和部署
 
-```bash
+```bash showLineNumbers
 # 构建WebAssembly模块
 wasm-pack build --target web
 
@@ -228,7 +228,7 @@ wasm-pack build --target bundler
 
 在HTML中使用：
 
-```html
+```html showLineNumbers
 <!DOCTYPE html>
 <html>
 <head>
