--- a/src/posts/2024/0415.md
+++ b/src/posts/2024/0415.md
@@ -11,7 +11,7 @@ tags: ['Web3', 'Blockchain', 'DApp']
 
 从去中心化金融（DeFi）到不可替代代币（NFT），从智能合约到去中心化自治组织（DAO），Web3生态系统正在不断扩展和成熟。让我们一起探索这个充满创新和机遇的领域。
 
-```solidity
+```solidity showLineNumbers
 // 智能合约示例
 pragma solidity ^0.8.0;
 
@@ -70,7 +70,7 @@ contract DecentralizedMarketplace {
 
 以太坊仍然是最主流的智能合约平台，但新一代的区块链平台如Solana、Avalanche等也在快速发展，它们提供了更高的性能和更低的交易成本。
 
-```typescript
+```typescript showLineNumbers
 // Web3.js与智能合约交互示例
 import Web3 from 'web3';
 import { AbiItem } from 'web3-utils';
@@ -117,7 +117,7 @@ class Web3Client {
 
 IPFS（InterPlanetary File System）和Filecoin等去中心化存储解决方案正在改变数据存储的方式。这些系统提供了更安全、更持久的数据存储选项。
 
-```typescript
+```typescript showLineNumbers
 // IPFS文件上传示例
 import { create } from 'ipfs-http-client';
 
@@ -147,7 +147,7 @@ class IPFSClient {
 
 去中心化身份（DID）系统允许用户完全控制自己的身份信息，不再依赖中心化的身份提供者。
 
-```typescript
+```typescript showLineNumbers
 // DID解析器示例
 interface DIDDocument {
   id: string;
@@ -186,7 +186,7 @@ class DIDResolver {
 
 在Web3应用开发中，安全性是最重要的考虑因素之一。智能合约的漏洞可能导致严重的经济损失。
 
-```solidity
+```solidity showLineNumbers
 // 安全的智能合约示例
 contract SecureToken {
     using SafeMath for uint256;
@@ -214,7 +214,7 @@ contract SecureToken {
 
 Web3应用的用户体验应该尽可能接近传统Web2应用，同时保持去中心化的特性。
 
-```typescript
+```typescript showLineNumbers
 // Web3钱包集成示例
 class Web3Wallet {
   private provider: any;
@@ -260,7 +260,7 @@ class Web3Wallet {
 
 由于区块链的特性，Web3应用需要特别注意性能优化，包括减少链上操作、使用缓存等策略。
 
-```typescript
+```typescript showLineNumbers
 // 链上数据缓存示例
 class BlockchainCache {
   private cache: Map<string, any>;
