--- a/src/posts/2024/0425.md
+++ b/src/posts/2024/0425.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Async Runtime', 'Server Development']
 
 ## Tokio入门
 
-```rust
+```rust showLineNumbers
 use tokio::net::{TcpListener, TcpStream};
 use tokio::io::{AsyncReadExt, AsyncWriteExt};
 
@@ -60,7 +60,7 @@ async fn process_socket(mut socket: TcpStream, addr: std::net::SocketAddr) {
 
 ## Async-std基础
 
-```rust
+```rust showLineNumbers
 use async_std::net::{TcpListener, TcpStream};
 use async_std::prelude::*;
 use async_std::task;
@@ -101,7 +101,7 @@ async fn process_stream(mut stream: TcpStream) {
 
 ### 1. 使用工作线程池
 
-```rust
+```rust showLineNumbers
 use tokio::runtime::Builder;
 use std::thread;
 
@@ -122,7 +122,7 @@ fn main() {
 
 ### 2. 使用缓冲区优化I/O
 
-```rust
+```rust showLineNumbers
 use tokio::io::{BufReader, BufWriter};
 
 async fn optimized_io(stream: TcpStream) {
@@ -140,7 +140,7 @@ async fn optimized_io(stream: TcpStream) {
 
 ### 3. 批处理和流处理
 
-```rust
+```rust showLineNumbers
 use futures::stream::{self, StreamExt};
 
 async fn process_batch<T>(items: Vec<T>) 
@@ -162,7 +162,7 @@ where
 
 ### 1. 自定义执行器
 
-```rust
+```rust showLineNumbers
 use std::future::Future;
 use std::pin::Pin;
 use std::task::{Context, Poll};
@@ -209,7 +209,7 @@ impl CustomExecutor {
 
 ### 2. 定时器和超时处理
 
-```rust
+```rust showLineNumbers
 use tokio::time::{sleep, timeout, Duration};
 
 async fn with_timeout<T, F>(fut: F, duration: Duration) -> Option<T>
@@ -234,7 +234,7 @@ async fn periodic_task() {
 
 ### 3. 资源池管理
 
-```rust
+```rust showLineNumbers
 use bb8::{Pool, PooledConnection};
 use tokio_postgres::NoTls;
 
