--- a/src/posts/2024/0505.md
+++ b/src/posts/2024/0505.md
@@ -15,7 +15,7 @@ tags: ['Rust', 'Network Programming', 'Server Development']
 
 ### 同步TCP服务器
 
-```rust
+```rust showLineNumbers
 use std::net::{TcpListener, TcpStream};
 use std::io::{Read, Write};
 use std::thread;
@@ -68,7 +68,7 @@ fn main() -> std::io::Result<()> {
 
 ### TCP客户端
 
-```rust
+```rust showLineNumbers
 use std::net::TcpStream;
 use std::io::{Read, Write};
 
@@ -92,7 +92,7 @@ fn main() -> std::io::Result<()> {
 
 ### UDP服务器
 
-```rust
+```rust showLineNumbers
 use std::net::UdpSocket;
 
 fn main() -> std::io::Result<()> {
@@ -118,7 +118,7 @@ fn main() -> std::io::Result<()> {
 
 ### UDP客户端
 
-```rust
+```rust showLineNumbers
 use std::net::UdpSocket;
 
 fn main() -> std::io::Result<()> {
@@ -141,7 +141,7 @@ fn main() -> std::io::Result<()> {
 
 ### 使用tokio的异步TCP服务器
 
-```rust
+```rust showLineNumbers
 use tokio::net::{TcpListener, TcpStream};
 use tokio::io::{AsyncReadExt, AsyncWriteExt};
 
@@ -185,7 +185,7 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
 
 ### 自定义协议
 
-```rust
+```rust showLineNumbers
 use serde::{Serialize, Deserialize};
 use tokio::io::{AsyncReadExt, AsyncWriteExt};
 use tokio::net::TcpStream;
@@ -223,7 +223,7 @@ async fn receive_message(stream: &mut TcpStream) -> std::io::Result<Message> {
 
 ### 连接池
 
-```rust
+```rust showLineNumbers
 use tokio::net::TcpStream;
 use std::collections::VecDeque;
 use std::sync::Arc;
