--- a/src/posts/2024/0515.md
+++ b/src/posts/2024/0515.md
@@ -11,7 +11,7 @@ tags: ['Cloud Native', 'DevOps', 'Kubernetes']
 
 从容器化到服务网格，从持续集成到持续部署，云原生和DevOps的结合正在重塑软件开发和运维的方式。让我们深入探讨这些技术和实践如何推动软件开发的进步。
 
-```yaml
+```yaml showLineNumbers
 # Kubernetes部署配置示例
 apiVersion: apps/v1
 kind: Deployment
@@ -61,7 +61,7 @@ spec:
 
 Kubernetes继续主导容器编排领域，但其生态系统正在变得更加成熟和易用。服务网格、无服务器计算等技术的集成使得云原生应用的开发和部署变得更加灵活。
 
-```typescript
+```typescript showLineNumbers
 // Kubernetes客户端示例
 import * as k8s from '@kubernetes/client-node';
 
@@ -116,7 +116,7 @@ class KubernetesClient {
 
 Istio等服务网格技术的应用范围不断扩大，为微服务架构提供了更强大的流量管理、安全性和可观测性能力。
 
-```yaml
+```yaml showLineNumbers
 # Istio虚拟服务配置示例
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -144,7 +144,7 @@ spec:
 
 GitOps已经成为云原生环境中进行配置管理和应用部署的标准方法。它通过Git作为单一事实来源，实现了基础设施即代码的理念。
 
-```typescript
+```typescript showLineNumbers
 // GitOps工具集成示例
 interface GitOpsConfig {
   repository: string;
@@ -189,7 +189,7 @@ class GitOpsController {
 
 现代CI/CD管道需要更加智能和自动化，包括自动化测试、安全扫描和性能测试等环节。
 
-```yaml
+```yaml showLineNumbers
 # GitHub Actions工作流示例
 name: CI/CD Pipeline
 
@@ -242,7 +242,7 @@ jobs:
 
 在云原生环境中，可观测性变得越来越重要。通过日志、指标和追踪等数据，我们可以更好地理解和优化系统性能。
 
-```typescript
+```typescript showLineNumbers
 // 可观测性集成示例
 interface Metrics {
   name: string;
@@ -299,7 +299,7 @@ class ObservabilitySystem {
 
 将安全实践集成到DevOps流程中（DevSecOps）已经成为标准做法。自动化的安全扫描和策略执行确保了应用的安全性。
 
-```typescript
+```typescript showLineNumbers
 // 安全扫描集成示例
 interface SecurityScan {
   repositoryUrl: string;
