--- a/src/posts/2024/0525.md
+++ b/src/posts/2024/0525.md
@@ -15,7 +15,7 @@ tags: ['Rust', 'Database', 'SQL', 'NoSQL']
 
 ### 基本连接和查询
 
-```rust
+```rust showLineNumbers
 use tokio_postgres::{NoTls, Error};
 
 #[tokio::main]
@@ -67,7 +67,7 @@ async fn main() -> Result<(), Error> {
 
 ### 事务处理
 
-```rust
+```rust showLineNumbers
 async fn transfer_money(
     client: &tokio_postgres::Client,
     from_account: i32,
@@ -118,7 +118,7 @@ async fn transfer_money(
 
 ### 基本操作
 
-```rust
+```rust showLineNumbers
 use mongodb::{Client, options::ClientOptions};
 use serde::{Deserialize, Serialize};
 
@@ -169,7 +169,7 @@ async fn main() -> mongodb::error::Result<()> {
 
 ### 高级查询和聚合
 
-```rust
+```rust showLineNumbers
 use mongodb::bson::{doc, Document};
 
 async fn advanced_queries(
@@ -211,7 +211,7 @@ async fn advanced_queries(
 
 ## Redis缓存
 
-```rust
+```rust showLineNumbers
 use redis::AsyncCommands;
 
 async fn cache_operations() -> redis::RedisResult<()> {
@@ -242,7 +242,7 @@ async fn cache_operations() -> redis::RedisResult<()> {
 
 ## 连接池管理
 
-```rust
+```rust showLineNumbers
 use bb8_postgres::PostgresConnectionManager;
 use tokio_postgres::NoTls;
 
