--- a/src/posts/2024/0530.md
+++ b/src/posts/2024/0530.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'CLI', 'Command Line']
 
 ## 使用Clap构建CLI
 
-```rust
+```rust showLineNumbers
 use clap::{App, Arg, SubCommand};
 
 fn main() {
@@ -60,7 +60,7 @@ fn main() {
 
 ## 使用Structopt
 
-```rust
+```rust showLineNumbers
 use structopt::StructOpt;
 
 #[derive(StructOpt, Debug)]
@@ -126,7 +126,7 @@ fn main() {
 
 ## 进度显示和用户交互
 
-```rust
+```rust showLineNumbers
 use indicatif::{ProgressBar, ProgressStyle};
 use console::Term;
 
@@ -163,7 +163,7 @@ fn interactive_prompt() -> std::io::Result<()> {
 
 ## 彩色输出
 
-```rust
+```rust showLineNumbers
 use colored::*;
 
 fn print_colored_output() {
@@ -180,7 +180,7 @@ fn print_colored_output() {
 
 ## 文件操作
 
-```rust
+```rust showLineNumbers
 use std::fs;
 use std::io::{self, Read, Write};
 use std::path::Path;
@@ -218,7 +218,7 @@ fn process_content(content: &str) -> String {
 
 ## 配置管理
 
-```rust
+```rust showLineNumbers
 use serde::{Deserialize, Serialize};
 use config::{Config, ConfigError, File};
 
@@ -258,7 +258,7 @@ fn load_config() -> Result<Settings, ConfigError> {
 
 ## 错误处理
 
-```rust
+```rust showLineNumbers
 use thiserror::Error;
 
 #[derive(Error, Debug)]
