--- a/src/posts/2024/0605.md
+++ b/src/posts/2024/0605.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Web Development', 'Frameworks']
 
 ## Actix-web入门
 
-```rust
+```rust showLineNumbers
 use actix_web::{web, App, HttpResponse, HttpServer, Responder};
 
 async fn hello() -> impl Responder {
@@ -39,7 +39,7 @@ async fn main() -> std::io::Result<()> {
 
 ## RESTful API开发
 
-```rust
+```rust showLineNumbers
 use actix_web::{web, App, HttpResponse, HttpServer};
 use serde::{Deserialize, Serialize};
 
@@ -81,7 +81,7 @@ async fn main() -> std::io::Result<()> {
 
 ## 中间件和错误处理
 
-```rust
+```rust showLineNumbers
 use actix_web::middleware::{Logger, NormalizePath};
 use actix_web::{error, middleware, web, App, Error, HttpResponse};
 
@@ -118,7 +118,7 @@ async fn main() -> std::io::Result<()> {
 
 ## Rocket框架示例
 
-```rust
+```rust showLineNumbers
 #[macro_use] extern crate rocket;
 
 #[get("/")]
@@ -140,7 +140,7 @@ fn rocket() -> _ {
 
 ## 数据库集成
 
-```rust
+```rust showLineNumbers
 use sqlx::PgPool;
 use actix_web::{web, App, HttpResponse, HttpServer};
 
@@ -177,7 +177,7 @@ async fn main() -> std::io::Result<()> {
 
 ## WebSocket支持
 
-```rust
+```rust showLineNumbers
 use actix::{Actor, StreamHandler};
 use actix_web::{web, App, Error, HttpRequest, HttpResponse, HttpServer};
 use actix_web_actors::ws;
@@ -220,7 +220,7 @@ async fn main() -> std::io::Result<()> {
 
 ## 文件上传处理
 
-```rust
+```rust showLineNumbers
 use actix_multipart::Multipart;
 use actix_web::{web, App, Error, HttpResponse, HttpServer};
 use futures::{StreamExt, TryStreamExt};
