--- a/src/posts/2024/0625.md
+++ b/src/posts/2024/0625.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Game Development', 'Graphics']
 
 ## 基础游戏循环
 
-```rust
+```rust showLineNumbers
 use std::time::{Duration, Instant};
 
 struct Game {
@@ -64,7 +64,7 @@ fn main() {
 
 ## 使用GGEZ引擎
 
-```rust
+```rust showLineNumbers
 use ggez::event::{self, EventHandler};
 use ggez::graphics::{self, Color, DrawParam};
 use ggez::{Context, GameResult};
@@ -122,7 +122,7 @@ fn main() -> GameResult {
 
 ## 使用Bevy引擎
 
-```rust
+```rust showLineNumbers
 use bevy::prelude::*;
 
 #[derive(Component)]
@@ -184,7 +184,7 @@ fn player_movement(
 
 ## 图形编程基础
 
-```rust
+```rust showLineNumbers
 use wgpu::*;
 use winit::event::*;
 use winit::event_loop::{ControlFlow, EventLoop};
@@ -331,7 +331,7 @@ async fn run() {
 
 ## 物理引擎集成
 
-```rust
+```rust showLineNumbers
 use rapier2d::prelude::*;
 
 struct PhysicsWorld {
@@ -409,7 +409,7 @@ impl PhysicsWorld {
 
 使用事件系统处理用户输入是游戏开发中的重要部分。以下是一个简单的输入处理示例：
 
-```rust
+```rust showLineNumbers
 use std::collections::HashMap;
 use winit::event::VirtualKeyCode;
 
@@ -438,7 +438,7 @@ impl InputManager {
 
 游戏中的资源管理对性能有重要影响。下面是一个简单的资源管理器实现：
 
-```rust
+```rust showLineNumbers
 use std::collections::HashMap;
 use std::path::PathBuf;
 
@@ -470,7 +470,7 @@ impl<T> AssetManager<T> {
 ## 性能优化技巧
 
 1. **对象池模式**
-```rust
+```rust showLineNumbers
 struct ObjectPool<T> {
     available: Vec<T>,
     in_use: Vec<T>,
@@ -504,7 +504,7 @@ impl<T> ObjectPool<T> {
 ```
 
 2. **帧率控制**
-```rust
+```rust showLineNumbers
 fn limit_fps(target_fps: u64) {
     let frame_duration = Duration::from_secs(1) / target_fps;
     let frame_start = Instant::now();
