--- a/src/posts/2024/0705.md
+++ b/src/posts/2024/0705.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Async Programming', 'Future']
 
 ## Future特性
 
-```rust
+```rust showLineNumbers
 use std::future::Future;
 use std::pin::Pin;
 use std::task::{Context, Poll};
@@ -57,7 +57,7 @@ Future是Rust异步编程的核心抽象：
 
 Rust的async/await语法提供了一种直观的方式来处理异步操作。相比直接使用Future，这种语法更加简洁和易于理解：
 
-```rust
+```rust showLineNumbers
 use tokio;
 
 #[tokio::main]
@@ -84,7 +84,7 @@ async/await语法糖使异步编程更加直观：
 
 Rust的异步生态系统中有多个运行时选择：
 
-```rust
+```rust showLineNumbers
 use tokio::net::TcpListener;
 use tokio::io::{AsyncReadExt, AsyncWriteExt};
 
@@ -124,7 +124,7 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
 
 ## 异步流（Streams）
 
-```rust
+```rust showLineNumbers
 use futures::stream::{self, StreamExt};
 
 async fn process_stream() {
@@ -144,7 +144,7 @@ async fn process_stream() {
 
 ## 错误处理
 
-```rust
+```rust showLineNumbers
 use std::io;
 
 async fn fetch_data() -> Result<String, io::Error> {
@@ -173,7 +173,7 @@ async fn process_data() -> Result<(), Box<dyn std::error::Error>> {
    - 评估性能和功能需求
 
 2. 正确处理取消
-   ```rust
+   ```rust showLineNumbers
    use tokio::select;
    use tokio::time::{sleep, Duration};
 
