--- a/src/posts/2024/0715.md
+++ b/src/posts/2024/0715.md
@@ -11,7 +11,7 @@ tags: ['Architecture', 'Design Patterns', 'Software Development']
 
 随着技术的不断发展，传统的设计模式正在与现代架构实践相结合，形成了新的最佳实践。从单体应用到微服务，从MVC到CQRS，从同步通信到事件驱动，让我们一起探索软件架构设计的演进之路。
 
-```typescript
+```typescript showLineNumbers
 // 现代架构模式示例：事件驱动架构
 interface Event {
   id: string;
@@ -50,7 +50,7 @@ class EventBus {
 
 领域驱动设计已经成为构建复杂系统的重要方法论。它强调业务领域的重要性，通过领域模型来指导系统设计。
 
-```typescript
+```typescript showLineNumbers
 // DDD示例：领域模型和聚合根
 interface Entity {
   id: string;
@@ -93,7 +93,7 @@ class Order implements AggregateRoot {
 
 命令查询责任分离（CQRS）模式在处理复杂业务系统时变得越来越重要。它将系统的读操作和写操作分离，以获得更好的性能和可扩展性。
 
-```typescript
+```typescript showLineNumbers
 // CQRS模式示例
 interface Command {
   type: string;
@@ -154,7 +154,7 @@ class OrderQueryHandler {
 
 事件溯源模式通过记录实体状态的变化序列，而不是仅存储当前状态，提供了更好的审计和调试能力。
 
-```typescript
+```typescript showLineNumbers
 // 事件溯源模式示例
 interface DomainEvent {
   eventId: string;
@@ -201,7 +201,7 @@ class EventStore {
 
 良好的模块化设计是构建可维护系统的基础。通过合理的模块划分，我们可以降低系统的复杂度，提高代码的重用性。
 
-```typescript
+```typescript showLineNumbers
 // 模块化设计示例
 module OrderModule {
   export interface OrderService {
@@ -235,7 +235,7 @@ module OrderModule {
 
 依赖注入模式帮助我们构建松耦合的系统，提高代码的可测试性和可维护性。
 
-```typescript
+```typescript showLineNumbers
 // 依赖注入示例
 interface Container {
   get<T>(token: string): T;
@@ -263,7 +263,7 @@ class DIContainer implements Container {
 
 响应式编程模式在处理异步数据流时变得越来越重要，它提供了更优雅的方式来处理异步操作。
 
-```typescript
+```typescript showLineNumbers
 // 响应式编程示例
 interface Observer<T> {
   next(value: T): void;
