--- a/src/posts/2024/0725.md
+++ b/src/posts/2024/0725.md
@@ -36,7 +36,7 @@ tags: ['Rust', 'Testing', 'Benchmark']
    - 可以检查具体的错误信息
    - 确保错误处理的正确性
 
-```rust
+```rust showLineNumbers
 #[cfg(test)]
 mod tests {
     use super::*;
@@ -68,7 +68,7 @@ mod tests {
 
 集成测试位于项目的tests目录下，主要用于验证多个组件之间的交互。这些测试模拟实际用户使用库的方式：
 
-```rust
+```rust showLineNumbers
 // tests/integration_test.rs
 use my_crate; // 引入被测试的crate
 
@@ -114,7 +114,7 @@ fn test_with_common() {
 
 使用criterion进行基准测试：
 
-```rust
+```rust showLineNumbers
 use criterion::{black_box, criterion_group, criterion_main, Criterion};
 
 fn fibonacci(n: u64) -> u64 {
@@ -142,7 +142,7 @@ criterion_main!(benches);
 
 ## 测试组织
 
-```rust
+```rust showLineNumbers
 #[cfg(test)]
 mod tests {
     use super::*;
@@ -178,7 +178,7 @@ mod tests {
 
 ## 测试属性
 
-```rust
+```rust showLineNumbers
 #[test]
 #[ignore]
 fn expensive_test() {
@@ -208,7 +208,7 @@ fn test_with_timeout() {
 
 ## 测试驱动开发
 
-```rust
+```rust showLineNumbers
 // 先写测试
 #[test]
 fn test_add_task() {
@@ -246,7 +246,7 @@ impl TodoList {
 ## 最佳实践
 
 1. 测试命名规范
-   ```rust
+   ```rust showLineNumbers
    #[test]
    fn test_when_valid_input_returns_success() {
        // 清晰的测试名称
@@ -254,7 +254,7 @@ impl TodoList {
    ```
 
 2. 测试隔离
-   ```rust
+   ```rust showLineNumbers
    #[test]
    fn test_independent() {
        let test_dir = tempfile::tempdir().unwrap();
@@ -263,7 +263,7 @@ impl TodoList {
    ```
 
 3. 参数化测试
-   ```rust
+   ```rust showLineNumbers
    #[test_case(1, 1, 2)]
    #[test_case(0, 1, 1)]
    #[test_case(1, 0, 1)]
