--- a/src/posts/2024/0805.md
+++ b/src/posts/2024/0805.md
@@ -35,7 +35,7 @@ tags: ['Rust', 'Systems Programming', 'FFI']
    - 允许复用现有代码
    - 便于渐进式迁移
 
-```rust
+```rust showLineNumbers
 #[link(name = "c")]
 extern "C" {
     fn abs(input: i32) -> i32;
@@ -67,7 +67,7 @@ fn main() {
 
 Unsafe Rust提供了执行低级系统编程操作的能力，但这种能力伴随着额外的责任。通过明确标记unsafe代码块，Rust强制开发者承认并仔细处理这些潜在的危险操作：
 
-```rust
+```rust showLineNumbers
 fn main() {
     let mut num = 5;
     
@@ -92,7 +92,7 @@ fn main() {
 
 ### 安全抽象
 
-```rust
+```rust showLineNumbers
 pub struct SafeWrapper {
     ptr: *mut u8,
     len: usize,
@@ -126,7 +126,7 @@ impl Drop for SafeWrapper {
 
 ## 系统调用
 
-```rust
+```rust showLineNumbers
 use std::process::Command;
 
 // 执行系统命令
@@ -145,7 +145,7 @@ fn execute_command() -> std::io::Result<()> {
 
 ### 直接系统调用
 
-```rust
+```rust showLineNumbers
 use std::os::unix::io::RawFd;
 
 #[cfg(target_os = "linux")]
@@ -161,7 +161,7 @@ fn raw_file_descriptor(fd: RawFd) {
 
 ## 内存管理
 
-```rust
+```rust showLineNumbers
 use std::alloc::{alloc, dealloc, Layout};
 
 fn manual_memory() {
@@ -182,7 +182,7 @@ fn manual_memory() {
 
 ## 平台特定代码
 
-```rust
+```rust showLineNumbers
 #[cfg(target_os = "linux")]
 fn platform_specific() {
     println!("Linux特定代码");
@@ -202,7 +202,7 @@ fn platform_specific() {
 ## 最佳实践
 
 1. 最小化unsafe代码
-   ```rust
+   ```rust showLineNumbers
    // 将unsafe代码封装在安全接口中
    pub struct SafeBuffer {
        data: *mut u8,
@@ -240,7 +240,7 @@ fn platform_specific() {
    ```
 
 2. 文档化unsafe代码
-   ```rust
+   ```rust showLineNumbers
    /// 一个安全的FFI接口示例
    /// 
    /// # Safety
@@ -264,7 +264,7 @@ fn platform_specific() {
    ```
 
 3. 错误处理和资源管理
-   ```rust
+   ```rust showLineNumbers
    pub struct ExternalResource {
        handle: *mut libc::c_void,
    }
@@ -302,7 +302,7 @@ fn platform_specific() {
    ```
 
 4. 平台特定代码的安全处理
-   ```rust
+   ```rust showLineNumbers
    #[cfg(target_os = "linux")]
    mod platform {
        use std::io::Error;
@@ -333,7 +333,7 @@ fn platform_specific() {
    ```
 
 5. 并发安全
-   ```rust
+   ```rust showLineNumbers
    use std::sync::atomic::{AtomicPtr, Ordering};
 
    pub struct ConcurrentResource {
@@ -372,7 +372,7 @@ fn platform_specific() {
    ```
 
 3. 使用条件编译
-   ```rust
+   ```rust showLineNumbers
    #[cfg_attr(target_os = "linux", path = "linux.rs")]
    #[cfg_attr(target_os = "windows", path = "windows.rs")]
    mod sys;
