--- a/src/posts/2024/0815.md
+++ b/src/posts/2024/0815.md
@@ -11,7 +11,7 @@ tags: ['AI', 'Architecture', 'System Design']
 
 从智能微服务到自适应系统，从AI辅助设计到智能化运维，人工智能正在重塑软件架构的方方面面。让我们一起探索AI驱动的软件架构设计新范式。
 
-```typescript
+```typescript showLineNumbers
 // AI驱动的自适应架构示例
 interface AdaptiveSystem {
   analyze(): Promise<SystemMetrics>;
@@ -74,7 +74,7 @@ class AIAdaptiveSystem implements AdaptiveSystem {
 
 在AI驱动的架构中，系统能够根据实时监控数据自动调整其行为和配置。这种自适应性使系统能够更好地应对负载变化和异常情况。
 
-```typescript
+```typescript showLineNumbers
 // 自适应负载均衡器示例
 class AILoadBalancer {
   private model: AIModel;
@@ -110,7 +110,7 @@ class AILoadBalancer {
 
 AI系统可以基于历史数据和实时信息做出更智能的架构决策，从资源分配到故障恢复都能实现自动化。
 
-```typescript
+```typescript showLineNumbers
 // 智能决策引擎示例
 class AIDecisionEngine {
   private model: AIModel;
@@ -144,7 +144,7 @@ class AIDecisionEngine {
 
 通过AI预测系统可能出现的问题，提前进行维护和优化，提高系统的可靠性。
 
-```typescript
+```typescript showLineNumbers
 // 预测性维护系统示例
 class PredictiveMaintenance {
   private model: AIModel;
@@ -180,7 +180,7 @@ class PredictiveMaintenance {
 
 利用AI技术实现更智能的系统监控，自动识别异常模式和性能瓶颈。
 
-```typescript
+```typescript showLineNumbers
 // 智能监控系统示例
 class AIMonitoringSystem {
   private model: AIModel;
@@ -213,7 +213,7 @@ class AIMonitoringSystem {
 
 系统能够根据负载预测自动进行扩展，优化资源利用。
 
-```typescript
+```typescript showLineNumbers
 // 智能扩展系统示例
 class AIScalingSystem {
   private model: AIModel;
@@ -247,7 +247,7 @@ class AIScalingSystem {
 
 使用AI生成测试用例，自动识别潜在问题。
 
-```typescript
+```typescript showLineNumbers
 // 智能测试系统示例
 class AITestingSystem {
   private model: AIModel;
