--- a/src/posts/2024/0825.md
+++ b/src/posts/2024/0825.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Embedded', 'no_std']
 
 ## no_std环境
 
-```rust
+```rust showLineNumbers
 #![no_std]
 #![no_main]
 
@@ -54,7 +54,7 @@ pub extern "C" fn _start() -> ! {
 
 ## 硬件抽象层（HAL）
 
-```rust
+```rust showLineNumbers
 use embedded_hal::digital::v2::OutputPin;
 use stm32f4xx_hal::{pac, prelude::*};
 
@@ -84,7 +84,7 @@ fn main() -> ! {
 
 ## 中断处理
 
-```rust
+```rust showLineNumbers
 use cortex_m::interrupt::free;
 use stm32f4xx_hal::interrupt;
 
@@ -122,7 +122,7 @@ fn main() -> ! {
 
 ## 外设访问
 
-```rust
+```rust showLineNumbers
 use embedded_hal::spi::{Mode, Phase, Polarity};
 use stm32f4xx_hal::{pac, prelude::*, spi::Spi};
 
@@ -158,7 +158,7 @@ fn main() -> ! {
 
 ## 实时系统集成
 
-```rust
+```rust showLineNumbers
 use rtic::app;
 
 #[app(device = stm32f4xx_hal::pac, peripherals = true)]
@@ -201,7 +201,7 @@ const APP: () = {
 
 ## 调试工具
 
-```rust
+```rust showLineNumbers
 use defmt::{debug, error, info, warn};
 use panic_probe as _;
 use probe_run::{self, config::Config};
@@ -303,7 +303,7 @@ mod rtos_debug {
 
 ## 内存管理
 
-```rust
+```rust showLineNumbers
 use alloc::{vec, vec::Vec};
 use embedded_alloc::Heap;
 
@@ -338,7 +338,7 @@ fn main() -> ! {
 ## 最佳实践
 
 1. 资源管理
-   ```rust
+   ```rust showLineNumbers
    #[entry]
    fn main() -> ! {
        // 使用const泛型优化内存
@@ -353,7 +353,7 @@ fn main() -> ! {
    ```
 
 2. 错误处理
-   ```rust
+   ```rust showLineNumbers
    use nb::block;
    
    fn read_sensor() -> nb::Result<u16, Error> {
@@ -366,7 +366,7 @@ fn main() -> ! {
    ```
 
 3. 电源管理
-   ```rust
+   ```rust showLineNumbers
    use cortex_m::asm;
    
    fn sleep_mode() {
