--- a/src/posts/2024/0915.md
+++ b/src/posts/2024/0915.md
@@ -11,7 +11,7 @@ tags: ['Database', 'NoSQL', 'Data Architecture']
 
 从分布式数据库到时序数据库，从图数据库到向量数据库，数据库技术的多样性为不同的应用场景提供了最优解。让我们一起探索数据库技术的演进之路。
 
-```typescript
+```typescript showLineNumbers
 // 多模型数据库访问示例
 interface DatabaseClient {
   connect(): Promise<void>;
@@ -53,7 +53,7 @@ class MultiModelDatabase {
 
 分布式数据库已经成为处理大规模数据的标准解决方案。通过数据分片和复制，这些系统提供了高可用性和可扩展性。
 
-```typescript
+```typescript showLineNumbers
 // 分布式数据库客户端示例
 class DistributedDatabaseClient implements DatabaseClient {
   private shards: DatabaseShard[];
@@ -98,7 +98,7 @@ class DistributedDatabaseClient implements DatabaseClient {
 
 随着物联网和监控系统的普及，时序数据库在处理时间序列数据方面展现出独特优势。
 
-```typescript
+```typescript showLineNumbers
 // 时序数据库接口示例
 interface TimeSeriesData {
   timestamp: number;
@@ -136,7 +136,7 @@ class TimeSeriesDB {
 
 图数据库在处理复杂关系网络时表现出色，特别适合社交网络、推荐系统等场景。
 
-```typescript
+```typescript showLineNumbers
 // 图数据库操作示例
 interface Node {
   id: string;
@@ -200,7 +200,7 @@ class GraphDatabase {
 
 良好的数据建模是数据库性能的基础。根据不同的数据库类型，我们需要采用不同的建模策略。
 
-```typescript
+```typescript showLineNumbers
 // 数据建模工具示例
 class DataModeler {
   validateSchema(schema: DatabaseSchema): SchemaValidation {
@@ -227,7 +227,7 @@ class DataModeler {
 
 数据库性能优化需要从多个层面考虑，包括索引设计、查询优化、缓存策略等。
 
-```typescript
+```typescript showLineNumbers
 // 性能优化工具示例
 class DatabaseOptimizer {
   async analyzeQueryPerformance(query: string): Promise<QueryAnalysis> {
@@ -254,7 +254,7 @@ class DatabaseOptimizer {
 
 数据安全是数据库管理中的重中之重，需要实施多层次的安全措施。
 
-```typescript
+```typescript showLineNumbers
 // 数据安全管理示例
 class DatabaseSecurity {
   async encryptData(data: any): Promise<EncryptedData> {
