--- a/src/posts/2024/0925.md
+++ b/src/posts/2024/0925.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Async', 'Concurrency']
 
 ## async/await 语法
 
-```rust
+```rust showLineNumbers
 use tokio;
 
 async fn fetch_data(url: &str) -> Result<String, Box<dyn std::error::Error>> {
@@ -23,7 +23,7 @@ async fn fetch_data(url: &str) -> Result<String, Box<dyn std::error::Error>> {
 }
 ```
 
-```rust
+```rust showLineNumbers
 #[tokio::main]
 async fn main() {
     match fetch_data("https://api.example.com/data").await {
@@ -52,7 +52,7 @@ async/await 语法是 Rust 异步编程的核心特性：
 
 ## Future trait
 
-```rust
+```rust showLineNumbers
 use std::future::Future;
 use std::pin::Pin;
 use std::task::{Context, Poll};
@@ -96,7 +96,7 @@ Future trait 是异步编程的基础：
 
 ## 异步运行时
 
-```rust
+```rust showLineNumbers
 use tokio::time::{sleep, Duration};
 
 async fn task1() {
@@ -142,7 +142,7 @@ async fn main() {
 
 ## 异步流处理
 
-```rust
+```rust showLineNumbers
 use futures::stream::{self, StreamExt};
 use tokio::time::{sleep, Duration};
 
@@ -186,7 +186,7 @@ async fn main() {
 
 ## 错误处理
 
-```rust
+```rust showLineNumbers
 use tokio::time::{sleep, Duration};
 use std::io;
 
@@ -222,7 +222,7 @@ async fn main() -> Result<(), Box<dyn std::error::Error>> {
 
 ## 性能优化
 
-```rust
+```rust showLineNumbers
 use tokio::sync::Semaphore;
 use std::sync::Arc;
 
