--- a/src/posts/2024/1015.md
+++ b/src/posts/2024/1015.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Macros', 'Metaprogramming']
 
 ## 声明宏
 
-```rust
+```rust showLineNumbers
 // 基础声明宏示例：创建向量
 macro_rules! vec {
     ( $( $x:expr ),* ) => {
@@ -111,7 +111,7 @@ fn main() {
 
 ## 过程宏
 
-```rust
+```rust showLineNumbers
 use proc_macro::TokenStream;
 use quote::quote;
 use syn::{parse_macro_input, DeriveInput};
@@ -206,7 +206,7 @@ fn main() {
 
 ## 属性宏
 
-```rust
+```rust showLineNumbers
 use proc_macro::TokenStream;
 use quote::quote;
 use syn::{parse_macro_input, ItemFn};
@@ -322,7 +322,7 @@ fn main() {
 
 ## 函数式宏
 
-```rust
+```rust showLineNumbers
 use proc_macro::TokenStream;
 use quote::quote;
 use syn::{parse_macro_input, Expr};
@@ -415,7 +415,7 @@ fn main() {
 
 ## 宏编程技巧
 
-```rust
+```rust showLineNumbers
 // 模式匹配技巧
 macro_rules! match_option {
     ($value:expr, $some:pat => $some_expr:expr, $none:expr) => {
