--- a/src/posts/2025/0215.md
+++ b/src/posts/2025/0215.md
@@ -15,7 +15,7 @@ tags: ['Full Stack', 'Architecture', 'Cloud Native', 'Modern Development']
 
 ### 从单体架构到微服务
 
-```typescript
+```typescript showLineNumbers
 // 传统单体架构
 class MonolithicApp {
   private userService: UserService;
@@ -48,7 +48,7 @@ class UserMicroService implements MicroService {
 
 ### 无服务器计算的应用
 
-```javascript
+```javascript showLineNumbers
 // 传统服务器部署
 const express = require('express');
 const app = express();
@@ -74,7 +74,7 @@ exports.handler = async (event, context) => {
 
 ### API优先的设计理念
 
-```yaml
+```yaml showLineNumbers
 # OpenAPI规范示例
 openapi: 3.0.0
 info:
@@ -101,7 +101,7 @@ paths:
 
 ### 前后端分离实践
 
-```typescript
+```typescript showLineNumbers
 // 前端状态管理
 interface AppState {
   user: UserState;
@@ -126,7 +126,7 @@ interface APIEndpoints {
 
 ### 前端框架的演进
 
-```typescript
+```typescript showLineNumbers
 // React 18+ 新特性应用
 import { Suspense, lazy } from 'react';
 import { createRoot } from 'react-dom/client';
@@ -157,7 +157,7 @@ root.render(<App />);
 
 ### 后端服务的容器化
 
-```yaml
+```yaml showLineNumbers
 # Docker Compose配置
 version: '3.8'
 services:
@@ -189,7 +189,7 @@ volumes:
 
 ### 数据库技术的革新
 
-```typescript
+```typescript showLineNumbers
 // 现代ORM示例 (Prisma)
 import { PrismaClient } from '@prisma/client';
 
@@ -222,7 +222,7 @@ async function createUser(data: UserCreateInput) {
 
 ### DevOps工具链整合
 
-```yaml
+```yaml showLineNumbers
 # GitHub Actions工作流
 name: CI/CD Pipeline
 
@@ -267,7 +267,7 @@ jobs:
 
 ### 代码复用率的提高
 
-```typescript
+```typescript showLineNumbers
 // 可复用的业务逻辑hooks
 function useBusinessLogic() {
   const [data, setData] = useState(null);
@@ -292,7 +292,7 @@ function useBusinessLogic() {
 
 ### 部署流程的简化
 
-```bash
+```bash showLineNumbers
 # 现代化部署流程
 
 # 1. 构建优化
@@ -342,7 +342,7 @@ project/
 
 ### 自动化测试策略
 
-```typescript
+```typescript showLineNumbers
 // 集成测试示例
 describe('User Service', () => {
   it('should create user with profile', async () => {
@@ -374,7 +374,7 @@ describe('User Service', () => {
 
 ### 低代码平台的崛起
 
-```typescript
+```typescript showLineNumbers
 // 低代码平台组件示例
 interface LowCodeComponent {
   type: string;
@@ -400,7 +400,7 @@ function renderLowCodeComponent(config: LowCodeComponent) {
 
 ### 跨平台开发的统一
 
-```typescript
+```typescript showLineNumbers
 // 跨平台组件示例
 interface CrossPlatformProps {
   platform: 'web' | 'mobile' | 'desktop';
