--- a/src/posts/2024/0205.md
+++ b/src/posts/2024/0205.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Lifetime', 'Memory Safety']
 
 ## 生命周期标注语法
 
-```rust
+```rust showLineNumbers
 // 生命周期参数以单引号开头
 fn longest<'a>(x: &'a str, y: &'a str) -> &'a str {
     if x.len() > y.len() {
@@ -39,7 +39,7 @@ Rust的编译器遵循三条生命周期省略规则：
 2. 如果只有一个输入生命周期参数，那么它被赋给所有输出生命周期参数
 3. 如果有多个输入生命周期参数，但其中一个是 `&self` 或 `&mut self`，那么 self 的生命周期被赋给所有输出生命周期参数
 
-```rust
+```rust showLineNumbers
 struct ImportantExcerpt<'a> {
     part: &'a str,
 }
@@ -58,7 +58,7 @@ impl<'a> ImportantExcerpt<'a> {
 
 ## 静态生命周期
 
-```rust
+```rust showLineNumbers
 // 'static生命周期存活于整个程序期间
 let s: &'static str = "我有一个静态生命周期";
 
@@ -70,7 +70,7 @@ fn generic<T: 'static>(t: T) {
 
 ## 在结构体中使用生命周期
 
-```rust
+```rust showLineNumbers
 struct Config<'a> {
     host: &'a str,
     port: u16,
@@ -96,7 +96,7 @@ fn main() {
 
 有时我们需要指定类型参数的生命周期边界：
 
-```rust
+```rust showLineNumbers
 use std::fmt::Display;
 
 fn longest_with_announcement<'a, T>(
