--- a/src/posts/2024/0228.md
+++ b/src/posts/2024/0228.md
@@ -11,7 +11,7 @@ tags: ['React', 'Frontend', 'Web Development']
 
 随着React团队对框架的不断优化和社区的积极贡献，React生态系统在2024年迎来了新的发展机遇。从服务器组件到并发渲染，从状态管理到构建工具，React生态正在经历一场深刻的变革。
 
-```typescript
+```typescript showLineNumbers
 // React Server Component示例
 import { Suspense } from 'react';
 import { fetchData } from './api';
@@ -44,7 +44,7 @@ export default function App() {
 
 React Server Components (RSC) 已经成为构建现代React应用的重要组成部分。它不仅能够减少客户端的JavaScript包大小，还能提供更好的首屏加载性能和SEO支持。
 
-```typescript
+```typescript showLineNumbers
 // 混合渲染模式示例
 'use client';
 
@@ -69,7 +69,7 @@ export default function HybridComponent() {
 
 状态管理工具正在向更简单、更高效的方向发展。React Query、Zustand等工具的兴起，为开发者提供了更轻量级的状态管理解决方案。
 
-```typescript
+```typescript showLineNumbers
 // Zustand状态管理示例
 import create from 'zustand';
 
@@ -102,7 +102,7 @@ function Counter() {
 
 Vite已经成为React项目的首选构建工具，它的快速启动和热更新能力大大提升了开发效率。
 
-```typescript
+```typescript showLineNumbers
 // vite.config.ts示例
 import { defineConfig } from 'vite';
 import react from '@vitejs/plugin-react';
@@ -134,7 +134,7 @@ export default defineConfig({
 
 现代React应用的组件设计更加注重可复用性和可维护性。我们推荐使用组合模式和自定义Hook来提高代码的复用率。
 
-```typescript
+```typescript showLineNumbers
 // 自定义Hook示例
 import { useState, useEffect } from 'react';
 
@@ -178,7 +178,7 @@ function SearchComponent() {
 
 性能优化已经成为React应用开发中不可或缺的一部分。通过合理使用memo、useMemo和useCallback，我们可以有效避免不必要的重渲染。
 
-```typescript
+```typescript showLineNumbers
 // 性能优化示例
 import { memo, useMemo, useCallback } from 'react';
 
@@ -223,7 +223,7 @@ function List({ items }: { items: any[] }) {
 
 现代React应用的测试策略更加注重实用性和维护成本。我们推荐使用React Testing Library和Jest进行单元测试和集成测试。
 
-```typescript
+```typescript showLineNumbers
 // 测试示例
 import { render, fireEvent, screen } from '@testing-library/react';
 import Counter from './Counter';
