--- a/src/posts/2024/0305.md
+++ b/src/posts/2024/0305.md
@@ -13,7 +13,7 @@ tags: ['Rust', 'Error Handling', 'Programming']
 
 ## Option类型：处理可能为空的值
 
-```rust
+```rust showLineNumbers
 fn divide(numerator: f64, denominator: f64) -> Option<f64> {
     if denominator == 0.0 {
         None
@@ -42,7 +42,7 @@ fn main() {
 
 ## Result类型：处理可能失败的操作
 
-```rust
+```rust showLineNumbers
 use std::fs::File;
 use std::io::{self, Read};
 
@@ -63,7 +63,7 @@ fn main() {
 
 ## 自定义错误类型
 
-```rust
+```rust showLineNumbers
 use std::fmt;
 use std::error::Error;
 
@@ -97,7 +97,7 @@ fn process_data(input: &str) -> Result<String, CustomError> {
 
 ## 错误传播
 
-```rust
+```rust showLineNumbers
 use std::fs;
 use std::io;
 use std::path::Path;
@@ -128,7 +128,7 @@ fn read_username_from_file_short() -> Result<String, io::Error> {
 
 ## 组合器模式
 
-```rust
+```rust showLineNumbers
 fn process_age(age_str: &str) -> Result<u8, String> {
     age_str
         .parse::<u8>()
@@ -161,7 +161,7 @@ fn main() {
 
 ## 错误处理策略
 
-```rust
+```rust showLineNumbers
 use std::error::Error;
 use std::fs::File;
 
