--- a/src/posts/2025/0115.md
+++ b/src/posts/2025/0115.md
@@ -11,7 +11,7 @@ tags: ['AI', 'Development', 'Coding Assistant', 'Pair Programming']
 
 这种转变不仅仅是技术的进步，更是开发模式的革新。本文将深入探讨这一转变如何重塑开发流程，以及开发者如何最大化利用这些工具。
 
-```python
+```python showLineNumbers
 from typing import List, Optional
 from decimal import Decimal
 from dataclasses import dataclass
@@ -131,7 +131,7 @@ AI代码助手通过深度学习和自然语言处理技术，实现了对代码
 - **潜在问题预测**：预测可能的性能问题和安全隐患
 - **改进建议生成**：提供具体可行的改进建议
 
-```typescript
+```typescript showLineNumbers
 // 支付处理相关的类型定义
 type Currency = 'USD' | 'EUR' | 'CNY';
 
@@ -469,7 +469,7 @@ AI代码助手能够实时分析代码质量，提供即时改进建议：
   - 建议安全的实现方式
   - 提供安全加固建议
 
-```typescript
+```typescript showLineNumbers
 // 示例：AI助手的实时代码审查和改进建议
 
 // 原始代码：存在多个潜在问题
@@ -578,7 +578,7 @@ AI代码助手能够智能分析代码逻辑，自动生成全面的测试用例
   - 补充缺失的测试场景
   - 优化测试策略
 
-```typescript
+```typescript showLineNumbers
 // 原始代码
 class UserService {
   async createUser(userData: UserInput): Promise<User> {
@@ -701,7 +701,7 @@ AI代码助手能够实时维护代码文档，确保文档与代码保持同步
   - 提供故障排除
   - 更新变更日志
 
-```typescript
+```typescript showLineNumbers
 /**
  * 用户认证服务
  * @packageDocumentation
@@ -802,7 +802,7 @@ AI代码助手能够分析系统架构，提供全面的优化建议：
   - 建议抽象层次
   - 优化接口设计
 
-```typescript
+```typescript showLineNumbers
 // 原始架构：紧耦合的单体应用
 class OrderService {
   private userService: UserService;
